--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 		<link rel="icon" href="icon.png">
 		<script>
 			var ctx;
-			var fps = 5, last;
+			var fps = 1, last, residue;
+			var isdankmode = false;
 			var c = { // control
 				tom: [0, 0], // tomove
 				pos: [[0, 0]],
 				gro: 0 // growth queue
 			};
 			var w = { // world
-				dim: 40, // x*x dimension
+				dim: 28, // x*x dimension
 				csz: 20 // cell size
 			}
 			window.onload = function() {
@@ -42,17 +43,64 @@
 							break;
 					}
 				}
+				var content = document.createElement("div");
+				content.setAttribute("id", "content");
+				content.style.position = "absolute";
+				content.style.left = "50%";
+				content.style.marginLeft = "-" + ((1 + w.csz * w.dim) / 2) + "px";
+				content.style.top = w.csz + "px";
+				content.style.width = w.csz * w.dim + "px";
+				content.style.height = w.csz * w.dim + "px";
+				content.style.backgroundColor = "red";
+				content.style.border = "1px solid #000";
+				document.body.appendChild(content);
+				for (var i = 0; i < w.dim * w.dim; i++) {
+					var d = document.createElement("div");
+					d.style.backgroundColor = ((i % 3 == 0) ? ("#afa") : ((i % 3 == 1) ? ("#9e9") : ("#8d8")));
+					d.style.position = "absolute";
+					d.style.left = (i % w.dim) * w.csz + "px";
+					d.style.top = Math.floor(i / w.dim) * w.csz + "px";
+					d.style.width = w.csz + "px";
+					d.style.height = w.csz + "px";
+					content.appendChild(d);
+				}
+				// debug("raw px margin-left content", window.innerWidth / 2 - (1 + (w.dim / 2) * w.csz));
+				document.getElementById("darkmodebutton").style.top = (w.csz + 1) + "px";
+				document.getElementById("darkmodebutton").style.left = ((window.innerWidth / 2 - (1 + (w.dim / 2) * w.csz)) - 81) + "px";
+				window.onresize = function() {
+					document.getElementById("darkmodebutton").style.left = ((window.innerWidth / 2 - (1 + (w.dim / 2) * w.csz)) - 81) + "px";
+				}
+				residue = 0;
 				last = Date.now();
 				window.requestAnimationFrame(main);
 			}
 			function main() {
-				if ((Date.now() - last) / 1000)) {
-					console.log("ye");
-					last = Date.now();
+				elap = Date.now() - last;
+				if (elap + residue >= 1000 / fps) {
+					residue = elap + residue - 1000 / fps;
+					last = Date.now();					
+					// debug("timeError", Date.now() % 1000 + " " + residue);
+					
+					
 				}
 				window.requestAnimationFrame(main);
 			}
+			function debug(head, value) {
+				console.log("debug " + head + ": " + value);
+			}
+			function toggledarkmode() {
+				isdankmode = !isdankmode;
+				if (isdankmode) {
+					document.body.style.backgroundColor = "#000";
+					document.getElementById("content").style.border = "1px solid #FFF";
+				} else {
+					document.body.style.backgroundColor = "#FFF";
+					document.getElementById("content").style.border = "1px solid #000";
+				}
+			}
 		</script>
 	</head>
-	<body></body>
+	<body>
+		<input type="button" id="darkmodebutton" value="Dark Mode" style="position: absolute; padding: 0; width: 74px; height: 30px; text-align: center; border: 1px solid black; opacity: 0.5;" onclick="toggledarkmode()">
+	</body>
 </html>
